chore: transition to npm registry

--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,2 @@
 unsafe-perm=true
-@nicoandmee:registry=https://npm.pkg.github.com
-//npm.pkg.github.com/:_authToken=${PAT_TOKEN}
+//registry.npmjs.org/:_authToken=${NPM_TOKEN}
